<resources>
    <string name="app_name">Alterra</string>
    <string name="hello_world">Hello World</string>
    <string name="app_title">Alterra</string>
    <string name="notification_channel_upload_title">Photo uploads</string>
    <string name="notification_channel_upload_description">Alterra upload-related notifications</string>
    <string name="notification_upload_inprogress">Uploading</string>
    <string name="notification_upload_success">Upload successful</string>
    <string name="notification_upload_button_pause">Pause</string>
    <string name="notification_upload_button_resume">Pause</string>

    <string name="nav_profile">Profile</string>
    <string name="nav_list">List</string>
    <string name="nav_map">Map</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Logout</string>

    <string name="permission_alert_title">Permission denied</string>
    <string name="permission_alert_body_location">This app needs location to work. Application will not start without your permission.</string>
    <string name="permission_alert_button_positive">Retry</string>
    <string name="permission_alert_button_negative">Quit</string>

    <string name="gps_alert_title">Enable GPS</string>
    <string name="gps_alert_body">Your GPS system seems disabled. Enable GPS to enjoy the most of Alterra</string>
    <string name="gps_alert_button_positive">OK!</string>

    <string name="pointnotfound_alert_title">No nearby Alterra location found</string>
    <string name="pointnotfound_alert_body">Move closer to nearby points</string>
    <string name="pointnotfound_alert_button_positive">OK!</string>

    <string name="alterrapointchoice_alert_title">Choose where you want to add a picture</string>

    <string name="maps_stylesheet">maps_style.json</string>
    <string name="map_marker_locked_icon">alterra-map-marker-locked.svg.png</string>
    <string name="map_marker_unlocked_icon">alterra-map-marker-unlocked.svg.png</string>
    <string name="map_marker_unlockable_icon">alterra-map-marker-unlockable.svg.png</string>

    <!-- Image Content Description -->
    <string name="content_description_profile_picture">Profile picture</string>
    <string name="content_description_alterra_logo">Alterra Logo</string>
    <string name="content_description_thumbnail">Thumbnail</string>
    <string name="content_description_unknown">Undefined picture</string>
    <string name="content_description_uqac_logo">UQAC Logo</string>

    <string name="maps_first_marker_click">Click on a marker to begin</string>

    <string name="alterra_point_locked">Too far</string>
    <string name="alterra_point_unlocked">Details</string>
    <string name="alterra_point_unlockable">Unlock</string>

    <string name="profile">My Profile</string>
    <string name="profile_photos">My Pictures</string>
    <string name="profile_photos_dialog_box_title">Delete picture</string>
    <string name="profile_photos_dialog_box_message">Do you want to delete this picture ?</string>
    <string name="profile_deletion_fail">Error while trying to delete image</string>
    <string name="profile_loading_fail">Failed to load pictures</string>

    <string name="details_loading_failed">Failed to load location details</string>
    <string name="details_users_loading_failed">Failed to load users</string>

    <string name="moved_too_far">You moved too far from initial position</string>

    <string name="estelle">Estelle LANDI</string>
    <string name="quentin">Quentin SIBUÉ</string>
    <string name="mathieu">Mathieu VINCENT</string>
    <string name="tanguy">Tanguy SAUTON</string>
</resources>
