<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_menu_profile">
        <item android:id="@+id/nav_item_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/ic_profil"/>
    </group>

    <group android:id="@+id/group_menu_home">
        <item android:id="@+id/nav_item_list"
            android:title="@string/nav_list"
            android:icon="@drawable/ic_list"/>
        <item android:id="@+id/nav_item_map"
            android:title="@string/nav_map"
            android:icon="@drawable/ic_map"/>
    </group>

    <group android:id="@+id/group_menu_other">
        <item android:id="@+id/nav_item_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings"/>
        <item android:id="@+id/nav_item_about"
            android:title="@string/nav_about"
            android:icon="@drawable/ic_about"/>
        <item android:id="@+id/nav_item_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_logout"/>

    </group>

</menu>