<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".about.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@android:color/transparent"/>

    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true">


        <ImageView
            android:id="@+id/btmThumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/alterra_logo_round"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_alterra_logo"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:id="@+id/title"
            android:textAlignment="center"
            android:textColor="#242B2F"
            android:textSize="35sp"
            android:textStyle="bold"
            />

    </LinearLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/app_name"
        android:rowCount="2"
        android:columnCount="2"
        android:padding="14dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/estelle">
            </TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/quentin">
            </TextView>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/tanguy">
            </TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/mathieu">
            </TextView>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/uqac_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/content_description_uqac_logo">
    </ImageView>
</RelativeLayout>



